--- a/resource/winMain.glade
+++ b/resource/winMain.glade
@@ -472,7 +472,7 @@
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
-                <signal name="clicked" handler="onCancelBtn1Clicked" object="msgDlg" swapped="no"/>
+                <signal name="clicked" handler="onCancelBtn1Clicked" object="dlgMsg" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
