--- a/resource/winAuthorization.glade
+++ b/resource/winAuthorization.glade
@@ -3,10 +3,13 @@
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkMessageDialog" id="dlgMsg">
+    <property name="name">dlgMsg</property>
     <property name="can-focus">False</property>
     <property name="title" translatable="yes">Сообщение</property>
     <property name="modal">True</property>
+    <property name="destroy-with-parent">True</property>
     <property name="type-hint">dialog</property>
+    <property name="deletable">False</property>
     <child internal-child="vbox">
       <object class="GtkBox">
         <property name="can-focus">False</property>
@@ -23,7 +26,7 @@
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
-                <signal name="clicked" handler="onCancelBtn1Clicked" object="dlgMsg" swapped="no"/>
+                <signal name="clicked" handler="onCancelBtnDlgClicked" object="dlgMsg" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -58,6 +61,7 @@
     <property name="default-width">400</property>
     <property name="default-height">150</property>
     <property name="icon-name">drive-harddisk</property>
+    <property name="attached-to">dlgMsg</property>
     <child>
       <object class="GtkBox">
         <property name="visible">True</property>
@@ -71,7 +75,7 @@
             <property name="row-homogeneous">True</property>
             <property name="column-homogeneous">True</property>
             <child>
-              <object class="GtkLabel" id="label_Pass">
+              <object class="GtkLabel" id="labelPass">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="halign">end</property>
@@ -84,7 +88,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="label_Login">
+              <object class="GtkLabel" id="labelLogin">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="halign">end</property>
@@ -97,7 +101,8 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="form_Login">
+              <object class="GtkEntry" id="formLogin">
+                <property name="name">formLogin</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="halign">start</property>
@@ -111,7 +116,8 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="form_Pass">
+              <object class="GtkEntry" id="formPass">
+                <property name="name">formPass</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="halign">start</property>
@@ -150,11 +156,12 @@
             <property name="homogeneous">True</property>
             <property name="layout-style">end</property>
             <child>
-              <object class="GtkButton" id="btn_Login">
+              <object class="GtkButton" id="btnLogin">
                 <property name="label" translatable="yes">Логин</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
+                <signal name="clicked" handler="onBtnLoginClicked" object="winAuthorization" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -163,11 +170,12 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="btn_Register">
+              <object class="GtkButton" id="btnRegister">
                 <property name="label" translatable="yes">Регистрация</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
+                <signal name="clicked" handler="onBtnRegisterClicked" object="winAuthorization" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
